--- a/app/Resources/views/admin/layout/sidebar.html.twig
+++ b/app/Resources/views/admin/layout/sidebar.html.twig
@@ -57,6 +57,23 @@
                     </ul>
                 </li>
 
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="menu-icon fa fa-file"></i>
+                        Product
+                    </a>
+                    <ul class="sub-menu children dropdown-menu">
+                        <li>
+                            <i class="fa fa-list-alt"></i>
+                            <a href="{{ path('admin_productcat_index') }}">Product Cat</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-list-alt"></i>
+                            <a href="{{ path('admin_product_index') }}">Product</a>
+                        </li>
+                    </ul>
+                </li>
+
                 <li>
                     <a href="{{ path('admin_comment_index') }}">
                         <i class="menu-icon fa fa-comments"></i>
